# openaiapi

./: .gitignore  Dockerfile  README.md  entrypoint.sh  environment.yml  jupyter_notebook_config.py  jupyter_server_config.py  pyproject.toml  requirements.txt  requirements_macos.txt  run_gradio.sh  stop_gradio.sh
data/: Brief_an_den_Vater_Wikisource.html
notes/: OCR_with_GPT_2.ipynb  youtube_analysis.ipynb
src/: ask_kafka_client.py  browser_use.py  chat_with_agent.py  create_vectorstore.py  kafka_brief.index  kafka_brief_an_den_vater.py  kafka_chatbot.py  kafka_chatbot_proxy.py  kafka_metadata.pkl  pdf_to_png.py
