[project]
name = "openaiapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bertopic>=0.17.3",
    "jupyter>=1.1.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "umap-learn>=0.5.9.post2",
]
